@@ -1,3 +1,8 @@
+2010-06-01  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* Mono.TextEditor.Vi/ViMode.cs: Reset on external caret change
+	  if not in insert/replace mode.
+
 2010-05-31  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* Mono.TextEditor.Vi/ViMode.cs: Better handling of '*'.
